clib/camwire/camwire.h

/* Sets the camera's acquisition type in single_shot_on: 1 for
   single-shot or 0 for continuous.  To capture a single frame, make
   sure that the camera is stopped, set the acquisition type to
   single-shot, and set the camera running (with camwire_set_run_stop())
   at the moment the frame is needed.  If the camera is already running
   while changing acquisition type from continous to single-shot, then
   the single frame is acquired immediately (pending an external trigger
   if used).  Changing acquisition type from single-shot to continuous
   while the camera is running is an unreliable thing to do, because you
   can't be sure if the single frame acquisition has started and hence
   you don't know whether the camera is stopped or running.  Returns
   CAMWIRE_SUCCESS on success or CAMWIRE_FAILURE on failure. */

int camwire_get_run_stop(const Camwire_handle c_handle, int *runsts);
/* Gets the camera run status in runsts: 1 for running or 0 for stopped.
   Returns CAMWIRE_SUCCESS on success or CAMWIRE_FAILURE on failure. */

int camwire_set_run_stop(const Camwire_handle c_handle, const int runsts);
/* Sets the camera run status in runsts: 1 for running or 0 for stopped.
   If a stopped camera is set to running while the acquisition type (as
   set by camwire_set_single_shot()) is single-shot, then only one frame
   is transmitted (pending an external trigger if used) after which the
   camera reverts to the stopped state.  Otherwise, frames are
   transmitted from camera to bus frame buffers at the programmed frame
   rate until the camera is stopped.  Returns CAMWIRE_SUCCESS on success
   or CAMWIRE_FAILURE on failure. */

int camwire_copy_next_frame(const Camwire_handle c_handle, void *buffer,
			    int *buffer_lag);
/* Waits until a frame has been received and copies it into the given
   buffer.  Note that this function may never return to the calling
   program if a frame does not become available, for example if the
   camera is not running or an external trigger does not arrive.  If
   more than one frame are buffered when this function is called then
   the earliest frame is copied.  If buffer_lag is not the null pointer,
   the number of bus frame buffers by which we are behind is returned in
   *buffer_lag.  This is the same number as can be obtained from
   camwire_get_framebuffer_lag().  The frame's number and time stamp are
   available afterwards from camwire_get_framenumber() and
   camwire_get_timestamp().  If speed is important then
   camwire_point_next_frame() or camwire_point_next_frame_poll() might
   be faster.  Returns CAMWIRE_SUCCESS on success or CAMWIRE_FAILURE on
   failure. */

int camwire_point_next_frame(const Camwire_handle c_handle, void **buf_ptr,
			     int *buffer_lag);
/* Sets the given buffer pointer buf_ptr to the next received frame
   buffer.  If a frame is ready it returns immediately, otherwise it
   waits until a frame has been received.  Note that this function may
   never return to the calling program if a frame does not become
   available, for example if the camera is not running or an external
   trigger does not arrive.  The frame buffer is locked, which prevents
   it from being overwritten by subsequent frames.  The calling program
   may freely read and write the buffer.  If more than one frames are
   buffered when this function is called then buf_ptr points to the
   earliest frame.  If buffer_lag is not the null pointer, the number of
   bus frame buffers by which we are behind is returned in *buffer_lag.
   This is the same number as can be obtained from
   camwire_get_framebuffer_lag().  The frame's number and time stamp are
   available afterwards from camwire_get_framenumber() and
   camwire_get_timestamp().  This function may be faster than
   camwire_copy_next_frame() because no copying is involved.  The
   downside is that the function camwire_unpoint_frame() must be called
   each time when done to release the frame buffer again.  Returns
   CAMWIRE_SUCCESS on success or CAMWIRE_FAILURE on failure. */

int camwire_point_next_frame_poll(const Camwire_handle c_handle,
				  void **buf_ptr, int *buffer_lag);
/* Sets the given buffer pointer buf_ptr to the next received frame
   buffer and returns immediately.  If no frame is ready it sets buf_ptr
   to the null pointer and returns 0 in *buffer_lag.  Although it may
   not always return a frame pointer, this function always returns to
   the calling program even if a frame does not become available.
   Otherwise its behaviour is similar to camwire_point_next_frame().
   Note that the values returned from camwire_get_framenumber() and
   camwire_get_timestamp() are not valid if no frame was returned.  Like
   camwire_point_next_frame(), the function camwire_unpoint_frame() must
   be called each time a frame is obtained to release the frame buffer
   again.  If no frame was obtained then camwire_unpoint_frame() should
   not be called.  Returns CAMWIRE_SUCCESS on success or CAMWIRE_FAILURE
   on failure. */

int camwire_unpoint_frame(const Camwire_handle c_handle);
/* Releases the bus frame buffer that was pointed to with the pointer
   access functions camwire_point_next_frame() or
   camwire_point_next_frame_poll(), so that it can be used again for
   receiving new image data.  Calls to pointer access functions and
   camwire_unpoint_frame() should be strictly interleaved, otherwise the
   next call to a pointer access function will fail.
   camwire_unpoint_frame() itself is however safe to call if no frame is
   locked in which case it has no effect.  Returns CAMWIRE_SUCCESS on
   success or CAMWIRE_FAILURE on failure. */

int camwire_get_framenumber(const Camwire_handle c_handle, long *framenumber);
/* Gets the serial number of the last frame captured with
   camwire_copy_next_frame(), camwire_point_next_frame() or
   camwire_point_next_frame_poll().  The number is initialized to zero
   by camwire_create() or camwire_create_from_struct(), and the first
   frame is number 1.  All frames are numbered (as far as possible -
   buffer overflows may cause problems) even if they are not accessed by
   camwire_copy_next_frame(), camwire_point_next_frame() or
   camwire_point_next_frame_poll().  If the camera or its bus are
   configured to drop old frames, the number of missed frames may be
   calculated as one less than the difference between consecutive frame
   numbers.  Returns CAMWIRE_SUCCESS on success or CAMWIRE_FAILURE on
   failure. */

int camwire_get_timestamp(const Camwire_handle c_handle,
			  struct timespec *timestamp);