dist/build/System/Camera/IIDC1394/Camwire.hs


newtype CameraRunning = CameraRunning CInt deriving (Eq,Show,Storable)
cameraRunning :: CameraRunning
cameraRunning = CameraRunning 1
cameraStopped :: CameraRunning
cameraStopped = CameraRunning 0

foreign import ccall unsafe "camwire.h camwire_get_run_stop" c_camwire_get_run_stop :: CamwireUnmanagedHandle -> Ptr CameraRunning -> IO CamwireResult

foreign import ccall unsafe "camwire.h camwire_set_run_stop" c_camwire_set_run_stop :: CamwireUnmanagedHandle -> CameraRunning -> IO CamwireResult

-- The raw functions for getting images don't know anything about the type
-- of data they are returning, so I use Ptr () for the frame buffer.
-- The wrapper around this will make them into appropriate StorableArray's.

foreign import ccall unsafe "camwire.h camwire_copy_next_frame" c_camwire_copy_next_frame :: CamwireUnmanagedHandle -> Ptr () -> Ptr CInt -> IO CamwireResult

foreign import ccall unsafe "camwire.h camwire_point_next_frame" c_camwire_point_next_frame :: CamwireUnmanagedHandle -> Ptr (Ptr ()) -> Ptr CInt -> IO CamwireResult

foreign import ccall unsafe "camwire.h camwire_point_next_frame_poll" c_camwire_point_next_frame_poll :: CamwireUnmanagedHandle -> Ptr (Ptr ()) -> Ptr CInt -> IO CamwireResult

foreign import ccall "wrapper" wrapWord16 :: (Ptr Word16 -> IO ()) -> IO (FunPtr (Ptr Word16 -> IO ()))

foreign import ccall unsafe "camwire.h camwire_unpoint_frame" c_camwire_unpoint_frame :: CamwireUnmanagedHandle -> IO CamwireResult

foreign import ccall unsafe "camwire.h camwire_get_framenumber" c_camwire_get_framenumber :: CamwireUnmanagedHandle -> Ptr CLong -> IO CamwireResult

data Timespec = Timespec { seconds :: CTime, nanoseconds :: CLong }
               deriving (Eq,Show)

instance Storable Timespec where
    alignment _ = 4
{-# LINE 242 "System/Camera/IIDC1394/Camwire.hsc" #-}
    sizeOf _ = (8)
{-# LINE 243 "System/Camera/IIDC1394/Camwire.hsc" #-}
    peek ptr = do
      s :: CTime <- (\hsc_ptr -> peekByteOff hsc_ptr 0) ptr
{-# LINE 245 "System/Camera/IIDC1394/Camwire.hsc" #-}
      ns :: CLong <- (\hsc_ptr -> peekByteOff hsc_ptr 4) ptr
{-# LINE 246 "System/Camera/IIDC1394/Camwire.hsc" #-}
      return (Timespec { seconds = s, nanoseconds = ns })
    poke ptr ts = do
      (\hsc_ptr -> pokeByteOff hsc_ptr 0) ptr (seconds ts)
{-# LINE 249 "System/Camera/IIDC1394/Camwire.hsc" #-}
      (\hsc_ptr -> pokeByteOff hsc_ptr 4) ptr (nanoseconds ts)
{-# LINE 250 "System/Camera/IIDC1394/Camwire.hsc" #-}

foreign import ccall unsafe "camwire.h camwire_get_timestamp" c_camwire_get_timestamp :: CamwireUnmanagedHandle -> Ptr Timespec -> IO CamwireResult
